--- a/.classpath
+++ b/.classpath
@@ -4,9 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/BoxLibs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/IamLoggingLibs"/>
-	<classpathentry kind="lib" path="/Users/hagimotk/iamLibs/grouper.jar"/>
-	<classpathentry kind="lib" path="/Users/hagimotk/iamLibs/subject.jar"/>
-	<classpathentry kind="lib" path="/Users/hagimotk/iamLibs/grouperClient.jar"/>
-	<classpathentry kind="lib" path="/Users/hagimotk/iamLibs/gson-2.3.1.jar"/>
+	<classpathentry kind="var" path="ECLIPSE_HOME"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/GrouperLibs"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JsonLibs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
