Updated to use the Service Account instead of co-admin credentials.

--- a/boxconfig.properties
+++ b/boxconfig.properties
@@ -1,18 +1,22 @@
 #BOX configurations for change log consumer 
-# Box Application: osubox_grouper
+enterpriseId=
+
+# Box Application
 clientId=
 clientSecret=
-enterpriseId=
-# For platform (Appuser)
 publicKeyId=
-privateKeyFile=
+privateKeyFile=/path/to/private_key.pem
 privateKeyPassword=
 maxCacheEntries=100
-# For coAdmin connection
-accessToken= 
-refreshTokenFile=
-# 
+
+# BOX Folder Admin account - used when archiving contents for users being deleted
+boxFolderAdmin=
+
+# boxAdmin email address
 boxAdminEmail=
 smtp=
 port=
 fromAddress=
+
+accessToken= 
+refreshTokenFile=/path/to/box_refresh_token.txt
